back to the cookbook

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "pipehouse",
+  "name": "cookbook-cli",
   "version": "0.0.1",
   "description": "CLI for adding Solana data pipes to your indexer",
   "type": "module",
   "bin": {
-    "pipehouse": "./dist/index.js"
+    "cookbook-cli": "./dist/index.js"
   },
   "files": [
     "dist",
